2017-12-08  Michael Saboff  <msaboff@apple.com>

        YARR: JIT RegExps with greedy parenthesized sub patterns
        https://bugs.webkit.org/show_bug.cgi?id=180538

        Reviewed by JF Bastien.

        This patch adds JIT support for regular expressions containing greedy counted
        parenthesis.  An example expression that couldn't be JIT'ed before is /q(a|b)*q/.

        Just like in the interpreter, expressions with nested parenthetical subpatterns
        require saving the results of previous matches of the parentheses contents along
        with any associated state.  This saved state is needed in the case that we need
        to backtrack.  This state is called ParenContext within the code space allocated
        for this ParenContext is managed using a simple block allocator within the JIT'ed
        code.  The raw space managed by this allocator is passed into the JIT'ed function.

        Since this fixed sized space may be exceeded, this patch adds a fallback mechanism.
        If the JIT'ed code exhausts all its ParenContext space, it returns a new error
        JSRegExpJITCodeFailure.  The caller will then bytecompile and interpret the
        expression.

        Due to increased register usage by the parenthesis handling code, the use of
        registers by the JIT engine was restructured, with registers used for Unicode
        pattern matching replaced with constants.

        Reworked some of the context structures that are used across the interpreter
        and JIT implementations to make them a little more uniform and to handle the
        needs of JIT'ing the new parentheses forms.

        To help with development and debugging of this code, compiled patterns dumping
        code was enhanced.  Also added the ability to also dump interpreter ByteCodes.

        * runtime/RegExp.cpp:
        (JSC::byteCodeCompilePattern):
        (JSC::RegExp::byteCodeCompileIfNecessary):
        (JSC::RegExp::compile):